--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version '2.7.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
 
@@ -6,11 +8,6 @@ java {
     sourceCompatibility = '1.8'
     targetCompatibility = '1.8'
 }
-
-task copyReact(type: Copy){
-    from 'frontend/build' into 'src/main/resources/static'
-}
-build.dependsOn copyReact
 
 group = 'org.example'
 version = '1.0-SNAPSHOT'
@@ -20,9 +17,21 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-dependencies:2.7.0"
+    }
+}
+
+task copyReact(type: Copy){
+    from 'frontend/build'
+    into 'src/main/resources/static'
+}
+build.dependsOn copyReact
 
 test {
     useJUnitPlatform()
